Fixed horizontal scrolling

--- a/src/App.scss
+++ b/src/App.scss
@@ -11,6 +11,10 @@ div, section {
     padding: 0;
 }
 
+div.wrapper {
+    padding: 0 20px;
+}
+
 div.App {
     padding-top: 100px;
 }
